Sculpting problem Radius number during push the Shift + click force back to 1px #111490

Closed
opened 2023-08-24 21:58:33 +02:00 by Kent Davis · 7 comments
First-time contributor

System Information
Operating system: macOS-13.6-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.14.1

Blender Version
Broken: version: 3.6.3 Release Candidate, branch: blender-v3.6-release, commit date: 2023-08-22 15:49, hash: 56659f1510b1
Worked: (newest version of Blender that worked as expected)

Short description of error
Sculpting problem Radius number during push the Shift + click force back to 1px

Exact steps for others to reproduce the error
Both Blender 3.6.3 and 4.0.0 is bug same on Sculpting push the Shift + click on Radius number.
image
Radius bug during push the Shift + click was 130 px force to back 1px itself.

See youtube:
https://youtu.be/4zQHmWskbdI?si=O9KcVgc__9XLlJBS

**System Information** Operating system: macOS-13.6-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.14.1 **Blender Version** Broken: version: 3.6.3 Release Candidate, branch: blender-v3.6-release, commit date: 2023-08-22 15:49, hash: `56659f1510b1` Worked: (newest version of Blender that worked as expected) **Short description of error** Sculpting problem Radius number during push the Shift + click force back to 1px **Exact steps for others to reproduce the error** Both Blender 3.6.3 and 4.0.0 is bug same on Sculpting push the Shift + click on Radius number. ![image](/attachments/66caa929-fb20-41dd-825e-ad69caba1dac) Radius bug during push the Shift + click was 130 px force to back 1px itself. See youtube: https://youtu.be/4zQHmWskbdI?si=O9KcVgc__9XLlJBS
434 KiB
Kent Davis added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-08-24 21:58:33 +02:00
Author
First-time contributor

I forget to put .blend file

I forget to put .blend file
Member

Can't replicate even on latest 4.0 🤔

Can't replicate even on latest 4.0 🤔
Author
First-time contributor

There

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-24 21:18, hash: ed5110c0ef4a
Worked: (newest version of Blender that worked as expected)

Same 3.6.3 and 4.0.0 problem with my .blend document for Mac.

There **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-24 21:18, hash: `ed5110c0ef4a` Worked: (newest version of Blender that worked as expected) Same 3.6.3 and 4.0.0 problem with my .blend document for Mac.
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-08-25 09:15:13 +02:00
Member

Close enough to the fix to self-assign here.

Close enough to the fix to self-assign here.
Philipp Oeser self-assigned this 2023-08-25 10:01:24 +02:00
Philipp Oeser added the
Module
Sculpt, Paint & Texture
label 2023-08-25 10:01:43 +02:00
Member

Put up a fix in !111516

Reason was that holding Shift, blender tries to (temporarily) use the Smooth tool (but the corresponding brush is missing in this file).
Note that this was then also not smoothing (just applying the tool).
Workaround for now: just use the Smooth tool once (this will bring back the Smooth brush), after doing that, blender should be back to normal.

Put up a fix in !111516 Reason was that holding `Shift`, blender tries to (temporarily) use the Smooth tool (but the corresponding brush is missing in this file). Note that this was then also not smoothing (just applying the tool). Workaround for now: just use the Smooth tool once (this will bring back the Smooth brush), after doing that, blender should be back to normal.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-29 13:44:47 +02:00
Author
First-time contributor

I check Blender 3.6.3 latest version still not resolve.
Blender 4.0 is perfect no error during push the shift and click on Sculpty.
Let you know.

I check Blender 3.6.3 latest version still not resolve. Blender 4.0 is perfect no error during push the shift and click on Sculpty. Let you know.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111490
No description provided.